css/main.css
body {
  padding-top: 16vh;
  background-color: #e5e5e5;
}

@font-face {
    font-family: good;
    src: url(Genome-Thin.otf);
}

@font-face {
    font-family: moderne;
    src: url(moderne.ttf);
}

@font-face {
    font-family: manifesto;
    src: url(manifesto.ttf);
}

@font-face {
    font-family: zwodrei;
    src: url(zwodrei.ttf);
}

p {
  font-size: 18px;
}

.navbar {
  min-height: 100px;
  float: none;
  text-align: center;
  width: 100%;
  border: none;
  margin: 0;
  background-color: white;
}

.navbar-header {
  float: none;
  display: inline-block;
}

.home-button {
  color: black;
  font-size: 40px;
  font-family: manifesto;
}

.navbar-nav {
  float: none;
  display: inline-block;
  font-size: 15px;
}

.navbar-nav li a {
  display: inline-block;
  position: relative;
  padding-bottom: 3px;

  margin: 0 30px;
  padding: 0;
  width: 165px;
  font-family: moderne;
  -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 3s; /* Firefox < 16 */
        -ms-animation: fadein 3s; /* Internet Explorer */
         -o-animation: fadein 3s;
            animation: fadein 3s;
}

.navbar-nav li a:after {
  content: '';
  display: block;
  margin: auto;
  height: 3px;
  width: 0px;
  background: transparent;
  transition: width .5s ease, background-color .5s ease;
}

.navbar-nav li a:hover:after {
  width: 100%;
  background: red;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@-moz-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@-webkit-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@-ms-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

@-o-keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.about {
  padding: 0 20%;
  text-align: justify;
}

.homebg {
  background-image: url("../assets/home_bg.jpg");
  height: 83vh;
  background-size: cover;
}

.english-name {
  color: black;
}

.thai-name {
  color: red;
}

.english-name,
.thai-name {
  font-size: 20px;
}

.description {
  font-family: good;
}

.icons {
  padding: 0 15px 0 15px;
}

.circle1 {
  border: 3px solid white;
  width: 650px;
  height: 650px;
  border-radius: 50%;
  background-image: url("https://i.imgur.com/IdIsJFL.png");
  padding: 2px;
  margin: auto;
  display: block;
}

.circle2 {
  border: 3px solid white;
  width: 660px;
  height: 660px;
  border-radius: 50%;
  padding: 2px;
  margin: auto;
  display: block;
}

.price {
  float: right;
}

.header {
  font-style: bold;
  color: red;
  font-family: moderne;
}

.time {
  color: black;
  font-weight: bolder;
  font-size: 17px;
}

.choice-of-meat {
  /*border: 1px solid black;*/
  text-align: center;
  padding: 5px;
  }

.price-combo {
  margin-bottom: 0;
  font-size: 14px;
  font-style: italic;
  color: grey;
}

.store-hours {
  color: grey;
}

.table {
  display: table;
  margin: 0 auto;
}

.spices {
  list-style: none;
  text-align: center;
}

.spices li {
  padding: 5px 10px;
  margin: 0 5px;
  width: 120px;
  display: inline-block;
}

.warning {
  text-align: center;
}

